--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 
     <head>
 
+        <link rel="stylesheet" href="./assets/css/style.css" />
+
         <meta charset="UTF-8" />
 
         <title>Run Buddy</title>
@@ -53,6 +55,7 @@
                     <li>
 
                         <a href="#reach-out">Reach Out</a>
+                        
                     </li>
 
                 </ul>
