--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
         <!-- "what we do" section -->
 
-        <section id="what-we-do">
+        <section id="what-we-do" class="intro">
 
             <h2>What We Do</h2>
 
