--- a/index.html
+++ b/index.html
@@ -314,6 +314,24 @@
 
                     </iframe>
 
+                    <h3>Contact Us</h3>
+
+                    <form>
+
+                        <label for="contact-name">Your Name</label>
+
+                        <input type="text" id="contact-name" placeholder="Your Name" />
+
+
+                        <label for="contact-message">Message</label>
+
+                        <textarea id="contact-message" placeholder="Message"></textarea>
+
+
+                        <button type="submit">Submit</button>
+                        
+                    </form>
+
                     <div>
 
                         <h3>Run Buddy</h3>
