--- a/index.html
+++ b/index.html
@@ -181,48 +181,102 @@
             </div>
 
 
-            <div>
+            <div class="step">
 
-                <!-- insert this img element -->
+                <h3>Step 1.</h3>
 
-                <img src="./assets/images/step-1.svg" alt="" />
+                <div class="step-info">
 
-                <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
+                    <div class="step-img">
 
-                <p>You're already here, so why not?</p>
+                        <img src="./assets/images/step-1.svg" alt="" />
 
-            </div>
+                    </div>
 
+                    <div class="step-text">
 
-            <div>
+                        <h4>Fill Out The Form Above</h4>
 
-                <img src="./assets/images/step-2.svg" alt="" />
+                        <p>You're already here, so why not?</p>
 
-                <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
+                    </div>
 
-                <p>Are you here to build muscle, lose weight, or just feel good?</p>
-
-            </div>
-
-
-            <div>
-
-                <img src="./assets/images/step-3.svg" alt="" />
-
-                <h3>Step 3: <span>Get Running.</span></h3>
-
-                <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+                </div>
 
             </div>
 
 
-            <div>
+            <div class="step">
 
-                <img src="./assets/images/step-4.svg" alt="" />
+                <h3>Step 2.</h3>
 
-                <h3>Step 4: <span>See Results.</span></h3>
+                <div class="step-info">
 
-                <p>Bi-weekly checkins with your trainer will keep you focused</p>
+                    <div class="step-img">
+
+                        <img src="./assets/images/step-2.svg" alt="" />
+
+                    </div>
+
+                    <div class="step-text">
+
+                        <h4>Consult with One of Our Trainers</h4>
+
+                        <p>Are you here to build muscle, lose weight, or just feel good?</p>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+
+            <div class="step">
+
+                <h3>Step 3.</h3>
+
+                <div class="step-info">
+
+                    <div class="step-img">
+
+                        <img src="./assets/images/step-3.svg" alt="" />
+
+                    </div>
+
+                    <div class="step-text">
+
+                        <h4>Get Running.</h4>
+
+                        <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+
+            <div class="step">
+
+                <h3>Step 4.</h3>
+
+                <div class="step-info">
+
+                    <div class="step-img">
+
+                        <img src="./assets/images/step-4.svg" alt="" />
+
+                    </div>
+
+                    <div class="step-text">
+
+                        <h4>See Results.</h4>
+
+                        <p>Bi-weekly checkins with your trainer will keep you focused</p>
+
+                    </div>
+
+                </div>
 
             </div>
 
