add flexbox to the trainers

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 
         <!-- "meet the trainers" section -->
 
-        <section id="your-trainers" class="trainers">
+        <section id="your-trainers">
 
             <div class="flex-row">
 
@@ -296,15 +296,17 @@
 
             </div>
 
+            <div class="trainers">
+
             <article class ="trainer">
 
                 <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
 
-                <div class="trainer-bio text-left">
+                <div class="trainer-bio">
 
-                    <h3>Arron Stephens</h3>
+                    <h3 class="trainer-name">Arron Stephens</h3>
 
-                    <h4>Speed / Strength</h4>
+                    <h4 class="trainer-role">Speed / Strength</h4>
 
                     <p>
 
@@ -320,11 +322,13 @@
 
             <article class ="trainer">
 
-                <div class="trainer-bio text-right">
+                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
 
-                    <h3>Joanna Gill</h3>
+                <div class="trainer-bio">
 
-                    <h4>Endurance</h4>
+                    <h3 class="trainer-name">Joanna Gill</h3>
+
+                    <h4 class="trainer-role">Endurance</h4>
 
                     <p>
 
@@ -334,7 +338,7 @@
 
                 </div>
 
-                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+                
 
             </article>
 
@@ -344,11 +348,11 @@
 
                 <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
 
-                <div class ="trainer-bio text-left">
+                <div class ="trainer-bio">
 
-                    <h3>Harry "the Headband" Smith</h3>
+                    <h3 class="trainer-name">Harry "the Headband" Smith</h3>
 
-                    <h4>Strength</h4>
+                    <h4 class="trainer-role">Strength</h4>
 
                     <p>
 
@@ -359,6 +363,8 @@
                 </div>
 
             </article>
+
+            </div>
 
         </section>
 
